# Stadium

./: .gitignore  Readme.md  docker-compose.yml  implementation.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/stadiummind/: __init__.py  main.py
backend/stadiummind/agents/: __init__.py  accessibility_agent.py  base.py  crowd_agent.py  emergency_agent.py  navigation_agent.py  orchestrator.py  sustainability_agent.py  transport_agent.py
backend/stadiummind/api/: __init__.py  app.py  middleware.py  schemas.py  security.py  service.py
backend/stadiummind/core/: __init__.py  config.py  exceptions.py  models.py  venue.py
backend/stadiummind/infra/: __init__.py  bus.py  cache.py  repository.py  sql_repository.py
backend/stadiummind/integrations/: __init__.py  directions.py  matches.py
backend/stadiummind/llm/: __init__.py  adapter.py
backend/stadiummind/ml/: __init__.py  crowd_predictor.py
backend/stadiummind/optimization/: __init__.py  allocation.py  queueing.py  routing.py
backend/stadiummind/simulation/: __init__.py  stadium.py
backend/tests/: conftest.py
backend/tests/integration/: test_fan_flows.py
backend/tests/optional/: test_sql_repository.py
backend/tests/system/: test_api.py  test_demo_story.py  test_gateway_security.py
backend/tests/unit/: test_agents.py  test_ai_logic.py  test_allocation.py  test_config_security.py  test_crowd_predictor.py  test_directions.py  test_infra.py  test_llm.py  test_matches.py  test_models.py  test_queueing.py  test_routing.py  test_security.py  (+3 more)
(+35 files in other folders)
