[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stadiummind"
version = "0.1.0"
description = "StadiumMind AI - GenAI operating system for FIFA World Cup 2026 stadiums"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Premnath Rail" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["stadiummind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
